@@ -33,6 +33,22 @@
 #include "sys/event.h"
 #include "private.h"
 
+static int __thread kq_cancelstate;
+
+void 
+kevent_tmp_cancel_enable(void)
+{
+    if (kq_cancelstate == PTHREAD_CANCEL_ENABLE) 
+        (void) pthread_setcancelstate(PTHREAD_CANCEL_ENABLE, NULL);
+}
+
+void 
+kevent_tmp_cancel_disable(void)
+{
+    if (kq_cancelstate == PTHREAD_CANCEL_ENABLE)
+        (void) pthread_setcancelstate(PTHREAD_CANCEL_DISABLE, NULL);
+}
+
 static char *
 kevent_filter_dump(const struct kevent *kev)
 {
@@ -238,7 +254,7 @@ kevent(int kqfd, const struct kevent *changelist, int nchanges,
         const struct timespec *timeout)
 {
     struct kqueue *kq;
-    int rv, n, nret, cancelstate;
+    int rv, n, nret;
 
     nret = 0;
 
@@ -248,7 +264,7 @@ kevent(int kqfd, const struct kevent *changelist, int nchanges,
         return (-1);
     }
 
-    if (pthread_setcancelstate(PTHREAD_CANCEL_DISABLE, &cancelstate) != 0)
+    if (pthread_setcancelstate(PTHREAD_CANCEL_DISABLE, &kq_cancelstate) != 0)
         return (-1);
 
     kqueue_lock(kq);
@@ -321,7 +337,7 @@ errout:
 out:
     kqueue_unlock(kq);
     kqueue_put(kq);
-    (void) pthread_setcancelstate(cancelstate, NULL);
+    (void) pthread_setcancelstate(kq_cancelstate, NULL);
     pthread_testcancel();
     return (nret);
 }
